# opticalib

./: .gitignore  .gitmodules  README.md  \  pyproject.toml
configs/: cam_calib.yaml  cam_calib_extrinsics.yaml  cam_calib_global.yaml  cam_calib_intrinsics.yaml
configs/calib/loss/: mse_exp.yaml  saturated.yaml  saturated_l1.yaml  saturated_l2.yaml
configs/calib/optimizer/: adam.yaml  lbfgs.yaml  sgd.yaml
configs/calib/scheduler/: cosine.yaml  (+1 more)
configs/charuco_boards/: charuco_11x9_cvl.yaml  charuco_cube.yaml  charuco_cube_10x10.yaml
configs/collector/: collector_global.yaml  collector_intrinsics.yaml
configs/collectors/: collector_default.yaml
configs/optimizer/: adam.yaml
configs/precalib/: config.yaml
configs/scheduler/: cosine.yaml  multistep.yaml  none.yaml
data/: a1.png-autosave.kra
data/charuco_boards/: charuco_11x9_cvl.yaml  charuco_7x5_3boards.yaml  charuco_7x5_A3.yaml  charuco_9x11_cvl_thin.yaml
data/pfs_files/: a2A4504-5gcBAS_40333929.pfs  a2A4504-5gcBAS_40333932.pfs
scripts/: calibrate.sh  calibrate_extrinsics.sh  calibrate_global.sh  calibrate_intrinsics.sh  collect.sh  collect_and_calibrate.sh  collect_and_calibrate_extrinsics.sh  collect_and_calibrate_global.sh  collect_and_calibrate_intrinsics.sh  collect_extrinsics.sh  collect_global.sh  collect_intrinsics.sh  get_charuco_images.sh
src/: blender_saver.py  camera_calibrator.py  charuco.py  generate_charuco.py  initializer.py  loss.py  main.py  optimizer.py  scene.blend  scene.blend1  scene.py  solver.py
src/objects/: charuco.py  object.py
src/old/: main.py  scene.py  solver.py
(+9 files in other folders)
